- Fixed/adjusted menu to be left-aligned - Added setting to start new brews with most recent values

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -226,7 +226,8 @@ ion-buttons[start] button {
 }
 
 ion-list.no-label-margin ion-label {
-  margin: 0px !important;
+  margin: 0px 0px 0px 12px !important;
+  text-align: left;
 }
 
 .bean-icon {
